@@ -7,13 +7,9 @@ to start, there is a list of ideas at the end of this file.
 
 * GUI: save (and load) cmd line history to ~/.fityk/wxhistory
 
-// * data title should be taken from xylib block or y column title
-
 * printing: it doesn't look good now (too thin lines, too small labels, ...)
 
 * GUI: on wxGTK 2.9 function choice on toolbar is not visible
-
-* xylib: more data formats
 
 * GUI: refactor MainPlot - mouse event handling based on subscriptions,
        a clean interface to XOR-drawing 
@@ -42,6 +38,8 @@ to start, there is a list of ideas at the end of this file.
 * BUG: "plot . []" sometimes doesn't work as expected if x axis is not visible.
 
 * ? rewrite manual in Markdown or Crossmark 
+
+* data import: possibility to use xylib column/block name as title
 
 --------------> 
 
